fix details on mobile

--- a/src/app/style/components/navigation.sass
+++ b/src/app/style/components/navigation.sass
@@ -22,7 +22,16 @@
           width: 100%
     &-button
       display: none
+      align-items: center
+      justify-content: center
+      background-color: $secondary-color
+      width: 50px
+      height: 50px
+      border-radius: 25px
       margin: 0
+      img
+        width: 15px
+        height: 15px
       @media screen and (max-width: 830px)
         display: flex
   .social
