--- a/src/app/style/pages/homepage.sass
+++ b/src/app/style/pages/homepage.sass
@@ -15,6 +15,7 @@
       width: 100%
       flex-direction: row
       justify-content: space-between
+      margin-top: 10px
     &-heading
       width: 100%
       margin-bottom: 80px
